--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -193,7 +193,8 @@ body {
 
 .btn-primary {
 
-  color: rgb(14, 1, 1);
+  color: rgb(242, 234, 234);
+  background-color:rgba(95, 64, 149, 0.83);
   border: 2px solid rgba(255, 255, 255, 0.3);
 }
 
@@ -410,12 +411,13 @@ body {
 .mb-1 { margin-bottom: 0.25rem; }
 .mb-2 { margin-bottom: 0.5rem; }
 .mb-3 { margin-bottom: 1rem; }
-.mb-4 { margin-bottom: 1.5rem; }
+.mb-4 { margin-bottom: 1rem; }
 .mb-6 { margin-top: 1rem; }
 .mb-8 {margin-top: 20px;}
 .mb-9 {margin: 10px;}
 .mb-10 {margin-bottom: 0.5rem;}
-.mb-11{margin-top:2rem}
+.mb-11{margin-top:2rem;}
+.mb-12{margin-bottom:1.5rem;}
 
 .mr-2 { margin-right: 0.5rem}
 .mr-4 { margin-right: 1rem; }
